# monet

./: .clang_complete  .gitignore  .gitmodules  README.md  meson.build  meson_options.txt  wscript
assets/: About.glade  Layout.glade  Menu.glade  basic_fs.glsl  basic_vs.glsl  demo.rml  display_fs.glsl  display_vs.glsl  window.rml
dep/: meson.build
dep/wq/: wscript
src/: wscript
src/app/: main.cxx  wscript
src/renderer/: Renderer.h  meson.build  wscript
src/renderer/include/renderer/: DemosaicRenderPass.h  DisplayRenderPass.h  ForwardDeclarations.h  Geometry.h  IRenderPass.h  IRenderPassConfig.h  RenderPass.h  RenderPassParameter.h  RenderPasses.h  Renderer.h  ShaderProgram.h  SimpleRenderPass.h  Texture.h
src/renderer/pch/: pch.h
src/renderer/src/: DemosaicRenderPass.cxx  DisplayRenderPass.cxx  Geometry.cxx  RenderPass.cxx  Renderer.cxx  ShaderProgram.cxx  SimpleRenderPass.cxx  Texture.cxx
src/ui/: meson.build  wscript
src/ui/include/ui/: AppDelegate.h  MainWindow.h  PlatformConfig.h  Window.h
src/ui/include/ui/gtk/: MainWindow-gtk.h
src/ui/include/ui/linux/: MainWindow-linux.h
src/ui/src/: AppDelegate.cxx  MainWindow.cxx  Window.cxx
src/ui/src/gtk/: MainWindow-gtk.cxx
src/ui/src/linux/: MainWindow-linux.cxx
src/util/: meson.build
src/util/include/util/: File.h
src/util/src/: File.cxx
